Stylesheet/emote/tag updates 2014-09-29

--- a/tags/applefritter.json
+++ b/tags/applefritter.json
@@ -10,6 +10,7 @@
 "/fritderp": ["+applefritter"],
 "/fritgrin": ["+applefritter"],
 "/frithappy": ["+applefritter"],
+"/frithmmm": ["+applefritter"],
 "/frithmph": ["+applefritter"],
 "/frithoof": ["+applefritter"],
 "/fritjoke": ["+applefritter"],
@@ -18,6 +19,7 @@
 "/fritnoway": ["+applefritter"],
 "/fritnya": ["+applefritter"],
 "/fritsad": ["+applefritter"],
+"/fritsalute": ["+applefritter"],
 "/fritshrug": ["+applefritter"],
 "/fritsitting": ["+animote", "+applefritter"],
 "/fritsleeping": ["+animote", "+applefritter"],
@@ -42,6 +44,7 @@
 "/rfritderp": ["+v"],
 "/rfritgrin": ["+v"],
 "/rfrithappy": ["+v"],
+"/rfrithmmm": ["+v"],
 "/rfrithmph": ["+v"],
 "/rfrithoof": ["+v"],
 "/rfritjoke": ["+v"],
@@ -50,6 +53,7 @@
 "/rfritnoway": ["+v"],
 "/rfritnya": ["+v"],
 "/rfritsad": ["+v"],
+"/rfritsalute": ["+v"],
 "/rfritshrug": ["+v"],
 "/rfritsitting": ["+v"],
 "/rfritsleeping": ["+v"],
