Stylesheet/emote/tag updates 2014-10-22

--- a/tags/applefritter.json
+++ b/tags/applefritter.json
@@ -33,6 +33,7 @@
 "/frittrotting": ["+animote", "+applefritter"],
 "/fritwhat": ["+applefritter"],
 "/frityay": ["+applefritter"],
+"/hardhatfrits": ["+applefritter"],
 "/rfritapple": ["+v"],
 "/rfritbake": ["+v"],
 "/rfritbbbff": ["+v"],
@@ -66,5 +67,6 @@
 "/rfritter": ["+v"],
 "/rfrittrotting": ["+v"],
 "/rfritwhat": ["+v"],
-"/rfrityay": ["+v"]
+"/rfrityay": ["+v"],
+"/rhardhatfrits": ["+v"]
 }
