--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -216,6 +216,8 @@ Conflicts:
   /t18:           r/mylittlefoodmanes     # Conflict with r/tacoshy
   /tavicheer:     r/taviquisition         # Conflict with r/mlplounge
   /tonightyou:    r/mlploungesteamgroup   # Duplicated to r/ponyloungerts
+  /twibutt:       r/flutterlounge         # Conflict with r/braeburnquisition,
+                                          # which came first, but is suggestive
   /twipoker:      r/mylittlewtf           # Conflict with r/thebestpony
   /weegee:        r/vinylscratch          # Conflict with r/thebestpony, which
                                           # came first, but they're the same
