--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -9,6 +9,7 @@
 ################################################################################
 
 Subreddits:
+- adagiodazzle
 - adery
 - ademotes
 - adviceponies
