--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -68,6 +68,7 @@ TagImplications:
   +sweetiebelle: [+canon, +cmc, +major, +pony]
 
   # Significant canon characters
+  +adagiodazzle: [+canon, +major, +pony]
   +angel: [+canon, +major]
   +babseed: [+canon, +major, +pony]
   +bigmac: [+canon, +major, +pony]
@@ -214,6 +215,7 @@ OtherTags:
   - +shadowbolt
   - +shipping
   - +shrug
+  - +siren
   - +sleeping
   - +spider
   - +sunglasses
