--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -68,6 +68,7 @@ TagImplications:
   +sweetiebelle: [+canon, +cmc, +major, +pony]
 
   # Significant canon characters
+  +ariablaze: [+canon, +major, +pony]
   +adagiodazzle: [+canon, +major, +pony]
   +angel: [+canon, +major]
   +babseed: [+canon, +major, +pony]
