--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -111,6 +111,7 @@ TagImplications:
   +silverspoon: [+canon, +major, +pony]
   +snipsandsnails: [+canon, +major, +pony]
   +spike: [+canon, +major]
+  +sonatadusk: [+canon, +major, +pony]
   +spitfire: [+canon, +major, +pony, +wonderbolt]
   +stevenmagnet: [+canon, +major]
   +sunsetshimmer: [+canon, +major] # +canon sort of, +major I can only assume
