--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -207,6 +207,7 @@ Conflicts:
   /flutterface:   r/equestriagirls        # Conflict with r/themirishponies
   /flutterstache: r/flutterlounge         # Conflict with r/ponyloungerts
   /glutes:        r/thebestpony           # Conflict with r/marmemotes
+  /gravestone:    r/ponymotes             # Conflict with r/ploungemafia
   /hugs:          r/mylittledaww          # Conflict with r/mylittlecirclejerk
   /maudsmile:     r/ponymotes             # Conflict with r/maudpie
   /mybodyisready: r/marmemotes            # Conflict with r/mylittlemango
@@ -222,6 +223,7 @@ Conflicts:
   /sphlyrafun:    r/mylittlensfw          # Conflict with r/mylittlechaos
   /t18:           r/mylittlefoodmanes     # Conflict with r/tacoshy
   /tavicheer:     r/taviquisition         # Conflict with r/mlplounge
+  /theydied:      r/ponymotes             # Conflict with r/ploungemafia
   /tonightyou:    r/mlploungesteamgroup   # Duplicated to r/ponyloungerts
   /twibutt:       r/flutterlounge         # Conflict with r/braeburnquisition,
                                           # which came first, but is suggestive
