Conflict fix for /fluffleshuffle

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -202,6 +202,7 @@ Conflicts:
   /dw01:          r/daylightemotes        # Conflict with r/gallopfrey
   /egstare:       r/equestriagirls        # Conflict with r/themirishponies
   /evilhom3r:     r/mylittlewtf           # Duplicated to r/mylittlecirclejerk
+  /fluffleshuffle: r/ponymotesextra2      # Conflict with r/mlploungesteamgroup
   /flutterbat:    r/flutterlounge         # Conflict with r/ponymotes
   /flitterbucket: r/flitterquisition      # (Temporary?) Conflict with r/pinkquisition
   /flutterface:   r/equestriagirls        # Conflict with r/themirishponies
