Update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,12 @@
 /www/chrome-update.html
 /www/*-logo.png
 /www/betterponymotes.update.rdf
-/www/opera-updates.xml
 
 # Symlinks for web page sync
 /www/*.xpi
-/www/*.oex
 
 __pycache__
 *.pyc
+
+# Other stuff
+/misc
