Conflict fixes for r/ariablaze, r/adagiodazzle, and r/sonatadusk

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -209,6 +209,12 @@ Conflicts:
   /abworry:       r/tbpimagedump          # Conflict with r/mlpdrawingschool
   /adviceshy:     r/mlploungesteamgroup   # Conflict with r/adviceponies, which
                                           # came first, but I like this one more.
+  /asad:          r/adagiodazzle          # Conflict between r/ariablaze and r/adagiodazzle
+  /asadagio:      r/adagiodazzle          # Conflict between r/ariablaze and r/adagiodazzle
+  /asab:          r/ariablaze             # Conflict between r/ariablaze and r/adagiodazzle
+  /asaria:        r/ariablaze             # Conflict between r/ariablaze and r/adagiodazzle
+  /assd:          r/ariablaze             # Conflict between r/ariablaze and r/adagiodazzle- should be r/sonatadusk?
+  /assonata:      r/ariablaze             # Conflict between r/ariablaze and r/adagiodazzle- should be r/sonatadusk?
   /dtlaugh:       r/berrytrain            # Conflict with r/zponymotes.
   /dw01:          r/daylightemotes        # Conflict with r/gallopfrey
   /egstare:       r/equestriagirls        # Conflict with r/themirishponies
