--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -48,6 +48,7 @@ Subreddits:
 - clopmotes
 - cloudchasermotes
 - colgateinquisition
+- comicsquisition
 - cuttershy
 - daylightemotes
 - desktopponies
