--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -208,6 +208,7 @@ Sorting:
 - [r/mylittlemusician, r/mylittlelistentothis] # Copies of some emotes
 
 Conflicts:
+  /absing:        r/bloomjackquisition    # Conflict with r/ariablaze
   /abwant:        r/mylittlelivestream    # Conflict with r/applebloom
   /abworry:       r/tbpimagedump          # Conflict with r/mlpdrawingschool
   /adviceshy:     r/mlploungesteamgroup   # Conflict with r/adviceponies, which
@@ -218,6 +219,7 @@ Conflicts:
   /asaria:        r/ariablaze             # Conflict between r/ariablaze and r/adagiodazzle
   /assd:          r/ariablaze             # Conflict between r/ariablaze and r/adagiodazzle- should be r/sonatadusk?
   /assonata:      r/ariablaze             # Conflict between r/ariablaze and r/adagiodazzle- should be r/sonatadusk?
+  /colgatestroll: r/colgateinquisition    # Conflict with r/clopmotes
   /dtlaugh:       r/berrytrain            # Conflict with r/zponymotes.
   /dw01:          r/daylightemotes        # Conflict with r/gallopfrey
   /egstare:       r/equestriagirls        # Conflict with r/themirishponies
