--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -109,6 +109,7 @@ TagImplications:
   +fleurdelis: [+canon, +major, +pony]
   +flimandflam: [+canon, +major, +pony]
   +gilda: [+canon, +major]
+  +starlightglimmer: [+canon, +major, +pony]
   +grannysmith: [+canon, +major, +pony]
   +gummy: [+canon, +major]
   +harshwhinny: [+canon, +major, +pony]
