--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -123,6 +123,7 @@ TagImplications:
   +nightmaremoon: [+canon, +major, +pony, +villain]
   +opalescence: [+canon, +major]
   +owlowiscious: [+canon, +major]
+  +partyfavor: [+canon, +pony]
   +peachbottom: [+canon, +pony]
   +photofinish: [+canon, +major, +pony]
   +pip: [+canon, +major, +pony]
