--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -253,6 +253,7 @@ Conflicts:
   /twibutt:       r/flutterlounge         # Conflict with r/braeburnquisition,
                                           # which came first, but is suggestive
   /twipoker:      r/mylittlewtf           # Conflict with r/thebestpony
+  /uncouth:       r/bloomjackquisition    # Conflict with r/thebestpony
   /weegee:        r/vinylscratch          # Conflict with r/thebestpony, which
                                           # came first, but they're the same
   /woonajuice:    r/mylittledaww          # Duplicated to r/mylittleanime
