--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -169,6 +169,7 @@ TagImplications:
   +roseluck: [+canon, +bgpony, +pony]
   +rubypinch: [+canon, +bgpony, +pony]
   +soarin: [+canon, +bgpony, +pony, +wonderbolt]
+  +sugarbelle: [+canon, +bgpony, +pony]
 
   # OC's
   +apathia: [+oc, +ocpony, +pony]
