--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -213,6 +213,7 @@ Sorting:
 Conflicts:
   /absing:        r/bloomjackquisition    # Conflict with r/ariablaze
   /abwant:        r/mylittlelivestream    # Conflict with r/applebloom
+  /abreally:      r/ariablaze             # Conflict with r/bloomjackquisition
   /abworry:       r/tbpimagedump          # Conflict with r/mlpdrawingschool
   /adviceshy:     r/mlploungesteamgroup   # Conflict with r/adviceponies, which
                                           # came first, but I like this one more.
