--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -160,6 +160,7 @@ Subreddits:
 - themirishponies
 - thepleasurehub
 - trixquisition
+- troubleshoes
 - twidashmotes
 - twilightsparkle
 - twiquisition
