--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -140,6 +140,7 @@ TagImplications:
   +tank: [+canon, +major]
   +tirek: [+canon, +major, +villain]
   +trixie: [+canon, +major, +pony]
+  +troubleshoes: [+canon, +major, +pony]
   +twist: [+canon, +major, +pony]
   +vinylscratch: [+canon, +major, +pony]
   +winona: [+canon, +major]
