Add random comment

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -19,6 +19,7 @@
 ################################################################################
 
 Subreddits:
+# NOTE: Don't forget to update web/index.html after editing this.
 - adagiodazzle
 - adery
 - ademotes
