Conflict fixes for /r/adagiodazzle

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -230,6 +230,8 @@ Conflicts:
   /abwant:        r/mylittlelivestream    # Conflict with r/applebloom
   /abreally:      r/ariablaze             # Conflict with r/bloomjackquisition
   /abworry:       r/tbpimagedump          # Conflict with r/mlpdrawingschool
+  /adlean:        r/appledashquisition    # Conflict with r/adagiodazzle
+  /adsad:         r/appledashquisition    # Conflict with r/adagiodazzle
   /adviceshy:     r/mlploungesteamgroup   # Conflict with r/adviceponies, which
                                           # came first, but I like this one more.
   /asad:          r/adagiodazzle          # Conflict between r/ariablaze and r/adagiodazzle
