Conflict fix for /imsorry

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -253,6 +253,7 @@ Conflicts:
   /glutes:        r/thebestpony           # Conflict with r/marmemotes
   /gravestone:    r/ponymotes             # Conflict with r/ploungemafia
   /hugs:          r/mylittledaww          # Conflict with r/mylittlecirclejerk
+  /imsorry:       r/pinkquisition         # Conflict with r/flutterlounge
   /maudsmile:     r/ponymotes             # Conflict with r/maudpie
   /mybodyisready: r/marmemotes            # Conflict with r/mylittlemango
   /nerdscratch:   r/ponymotes             # Conflict with r/vinylscratch
