Add some tags and aliases

--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -59,6 +59,7 @@ TagAliases:
   +vinylscratch: [+djpony, +djpon3]
 
   +carrottop: [+goldenharvest]
+  +colgate: [+minuette]
   +doctorwhooves: [+timeturner, +dw]
   +lyra: [+heartstrings]
   +soarin: [+soaren]
@@ -120,6 +121,7 @@ TagImplications:
   +maredowell: [+canon, +major, +pony]
   +maud: [+canon, +major, +pony]
   +mayor: [+canon, +major, +pony]
+  +moondancer: [+canon, +major, +pony]
   +nightmaremoon: [+canon, +major, +pony, +villain]
   +opalescence: [+canon, +major]
   +owlowiscious: [+canon, +major]
