--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -234,6 +234,7 @@ Conflicts:
   /adsad:         r/appledashquisition    # Conflict with r/adagiodazzle
   /adviceshy:     r/mlploungesteamgroup   # Conflict with r/adviceponies, which
                                           # came first, but I like this one more.
+  /applejack:     r/mylittlelistentothis  # Conflict with r/thebelletower
   /asad:          r/adagiodazzle          # Conflict between r/ariablaze and r/adagiodazzle
   /asadagio:      r/adagiodazzle          # Conflict between r/ariablaze and r/adagiodazzle
   /asab:          r/ariablaze             # Conflict between r/ariablaze and r/adagiodazzle
