--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -121,6 +121,7 @@ Subreddits:
 - mylittlewarhammer
 - mylittlewelcomewagon
 - mylittlewtf
+- nightglider
 - onetrueprincess
 - pankakke
 - partyfavor
