--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -166,6 +166,7 @@ TagImplications:
   +lotus: [+canon, +bgpony, +pony]
   +lyra: [+canon, +bgpony, +pony]
   +medley: [+canon, +bgpony, +pony]
+  +nightglider: [+canon, +bgpony, +pony]
   +nurseredheart: [+canon, +bgpony, +pony]
   +octavia: [+canon, +bgpony, +pony]
   +otherpony: [+canon, +bgpony, +pony]
