Add +browniebun and +horsewife

--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -71,6 +71,8 @@ TagAliases:
 
   +equestriagirls: [+eqg]
 
+  +browniebun: [+horsewife]
+
 TagImplications:
   # Special tags
   +broken: [+remove]
@@ -178,6 +180,7 @@ TagImplications:
   # OC's
   +apathia: [+oc, +ocpony, +pony]
   +blackjack: [+oc, +ocpony, +pony]
+  +browniebun: [+oc, +ocpony, +pony]
   +calamity: [+oc, +ocpony, +pony]
   +daylightdarkle: [+oc, +ocpony, +pony]
   +discentia: [+oc, +ocpony, +pony]
