--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -109,6 +109,7 @@ TagImplications:
   +diamondtiara: [+canon, +major, +pony]
   +discord: [+canon, +major, +villain]
   +fancypants: [+canon, +major, +pony]
+  +flashsentry: [+canon, +major, +pony]
   +fleurdelis: [+canon, +major, +pony]
   +flimandflam: [+canon, +major, +pony]
   +gilda: [+canon, +major]
