Add /r/coloratura, /r/flimflambrothers

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -50,6 +50,7 @@ Subreddits:
 - clopmotes
 - cloudchasermotes
 - colgateinquisition
+- coloratura
 - comicsquisition
 - cuttershy
 - daylightemotes
@@ -57,6 +58,7 @@ Subreddits:
 - equestriagirls
 - falloutequestria
 - flashsentry
+- flimflambrothers
 - flitter
 - flitterquisition
 - flutquisition
