--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -100,6 +100,7 @@ TagImplications:
   +princesscadance: [+canon, +major, +pony]
   +caketwins: [+canon, +major, +pony]
   +cheerilee: [+canon, +major, +pony]
+  +coloratura: [+canon, +major, +pony]
   +queenchrysalis: [+canon, +major, +pony, +villain]
   +cheesesandwich: [+canon, +major, +pony]
   +cockatrice: [+canon, +major]
