Initial injection of settings panel

--- a/discord/integration/package.json
+++ b/discord/integration/package.json
@@ -3,6 +3,7 @@
   "description": "Discord integration for Typhos' Better Ponymotes",
   "version": "0.0.1",
   "homepage": "https://github.com/ByzantineFailure/bpm",
+  "repository": "https://github.com/ByzantineFailure/bpm",
   "license": "AGPL-3.0",
   "main": "bpm.js"
 }
