Fix conflict over /starlighthappy (r/glimmerquisition vs. r/starlightglimmer)

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -273,6 +273,7 @@ Conflicts:
   /sadlyra:       r/mylittleonions        # Conflict with r/mylittleanime
   /shrug:         r/vinylscratch          # Conflict with r/mylittlecirclejerk
   /sphlyrafun:    r/mylittlensfw          # Conflict with r/mylittlechaos
+  /starlighthappy: r/glimmerquisition     # Conflict with r/starlightglimmer
   /t18:           r/mylittlefoodmanes     # Conflict with r/tacoshy
   /tavicheer:     r/taviquisition         # Conflict with r/mlplounge
   /theydied:      r/ponymotes             # Conflict with r/ploungemafia
