--- a/tags/applefritter.json
+++ b/tags/applefritter.json
@@ -6,6 +6,7 @@
 "/fritbow": ["+applefritter"],
 "/fritchubbie": ["+applefritter"],
 "/fritclapping": ["+animote", "+applefritter"],
+"/fritcute": ["+applefritter"],
 "/fritdancing": ["+animote", "+applefritter"],
 "/fritderp": ["+applefritter"],
 "/fritgrin": ["+applefritter"],
@@ -16,10 +17,13 @@
 "/fritjoke": ["+applefritter"],
 "/fritlie": ["+applefritter"],
 "/fritmad": ["+applefritter"],
+"/fritmeh": ["+applefritter"],
 "/fritnoway": ["+applefritter"],
 "/fritnya": ["+applefritter"],
+"/fritreally": ["+applefritter"],
 "/fritsad": ["+applefritter"],
 "/fritsalute": ["+applefritter"],
+"/fritshock": ["+applefritter"],
 "/fritshrug": ["+applefritter"],
 "/fritsitting": ["+animote", "+applefritter"],
 "/fritsleeping": ["+animote", "+applefritter"],
@@ -28,10 +32,12 @@
 "/fritsmirk": ["+applefritter"],
 "/fritspet": ["+applefritter"],
 "/fritstanding": ["+animote", "+applefritter"],
+"/fritstare": ["+applefritter"],
 "/fritteehee": ["+applefritter"],
 "/fritter": ["+misc"],
 "/frittrotting": ["+animote", "+applefritter"],
 "/fritwhat": ["+applefritter"],
+"/fritwink": ["+applefritter"],
 "/frityay": ["+applefritter"],
 "/hardhatfrits": ["+applefritter"],
 "/rfritapple": ["+v"],
@@ -41,6 +47,7 @@
 "/rfritbow": ["+v"],
 "/rfritchubbie": ["+v"],
 "/rfritclapping": ["+v"],
+"/rfritcute": ["+v"],
 "/rfritdancing": ["+v"],
 "/rfritderp": ["+v"],
 "/rfritgrin": ["+v"],
@@ -51,10 +58,13 @@
 "/rfritjoke": ["+v"],
 "/rfritlie": ["+v"],
 "/rfritmad": ["+v"],
+"/rfritmeh": ["+v"],
 "/rfritnoway": ["+v"],
 "/rfritnya": ["+v"],
+"/rfritreally": ["+v"],
 "/rfritsad": ["+v"],
 "/rfritsalute": ["+v"],
+"/rfritshock": ["+v"],
 "/rfritshrug": ["+v"],
 "/rfritsitting": ["+v"],
 "/rfritsleeping": ["+v"],
@@ -63,10 +73,12 @@
 "/rfritsmirk": ["+v"],
 "/rfritspet": ["+v"],
 "/rfritstanding": ["+v"],
+"/rfritstare": ["+v"],
 "/rfritteehee": ["+v"],
 "/rfritter": ["+v"],
 "/rfrittrotting": ["+v"],
 "/rfritwhat": ["+v"],
+"/rfritwink": ["+v"],
 "/rfrityay": ["+v"],
 "/rhardhatfrits": ["+v"]
 }
