Add r/mylittleantisonic1, r/rosequisition, and r/sunburst

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -21,8 +21,8 @@
 Subreddits:
 # NOTE: Don't forget to update web/index.html after editing this.
 - adagiodazzle
-- adery
 - ademotes
+- adery
 - adviceponies
 - afterplounge
 - ainbowdash
@@ -88,6 +88,7 @@ Subreddits:
 - mylittlealicorn
 - mylittleandysonic1
 - mylittleanime
+- mylittleantisonic1
 - mylittleaprilfools
 - mylittlebannertest
 - mylittlecelestias
@@ -142,6 +143,7 @@ Subreddits:
 - ponymotesextra2
 - pwettypwinkpwincesses
 - roseluck
+- rosequisition
 - rubypinch
 - sapphirestone
 - scootalounge
@@ -155,6 +157,7 @@ Subreddits:
 - spitquisition
 - starlightglimmer
 - sugarbelle
+- sunburst
 - sunsetshimmer
 - surprise
 - sweetie_belle
@@ -164,8 +167,8 @@ Subreddits:
 - tbpimagedump
 - tbpimagedump2
 - thebelletower
-- thecane
 - thebestpony
+- thecane
 - themirishponies
 - thepleasurehub
 - trixquisition
