--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -109,6 +109,7 @@ TagImplications:
   +derpy: [+canon, +major, +pony]
   +diamondtiara: [+canon, +major, +pony]
   +discord: [+canon, +major, +villain]
+  +ember: [+canon, +major]
   +fancypants: [+canon, +major, +pony]
   +flashsentry: [+canon, +major, +pony]
   +fleurdelis: [+canon, +major, +pony]
@@ -148,6 +149,7 @@ TagImplications:
   +trixie: [+canon, +major, +pony]
   +troubleshoes: [+canon, +major, +pony]
   +twist: [+canon, +major, +pony]
+  +sunburst: [+canon, +major, +pony]
   +vinylscratch: [+canon, +major, +pony]
   +winona: [+canon, +major]
   +zecora: [+canon, +major, +pony]
