Move /r/mylittleantisonic1 to /r/antisonicmotes

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -27,6 +27,7 @@ Subreddits:
 - afterplounge
 - ainbowdash
 - anotherponymotessub
+- antisonicmotes
 - applebloom
 - appledashquisition
 - applefritter
@@ -88,7 +89,6 @@ Subreddits:
 - mylittlealicorn
 - mylittleandysonic1
 - mylittleanime
-- mylittleantisonic1
 - mylittleaprilfools
 - mylittlebannertest
 - mylittlecelestias
