Added support to the Plounge.

--- a/ios/bpm/DEBIAN/control
+++ b/ios/bpm/DEBIAN/control
@@ -1,10 +1,10 @@
-Package: ga.j-co.mlp.bpm
+Package: net.ponymotes.bpm
 Name: PonyMotes for iOS
-Version: 0.1
+Version: 0.2
 Architecture: iphoneos-arm
 Description: Thousands of ponymotes for Alien Blue
 Depiction: http://shugabuga.github.io/bpm-apt/web/depictions/index.html?p=betterponymotes
-Homepage: http://j-co.ga/mlp
+Homepage: https://ponymotes.net/bpm
 Maintainer: HeyItsShuga <heyitsshuga@gmail.com>
 Author: HeyItsShuga <heyitsshuga@gmail.com>
-Section: Alien Blue Emotes
+Section: Emotes
