--- a/tags/applejack.json
+++ b/tags/applejack.json
@@ -31,62 +31,23 @@
 "/aj29": ["+remove"],
 "/apj00": ["+applejack"],
 "/apj01": ["+applejack"],
-"/apj02": ["+remove"],
-"/apj03": ["+remove"],
-"/apj04": ["+remove"],
-"/apj05": ["+remove"],
-"/apj06": ["+remove"],
-"/apj07": ["+remove"],
-"/apj08": ["+remove"],
-"/apj09": ["+remove"],
 "/apj10": ["+applejack"],
 "/apj11": ["+applejack"],
-"/apj12": ["+remove"],
-"/apj13": ["+remove"],
-"/apj14": ["+remove"],
-"/apj15": ["+remove"],
-"/apj16": ["+remove"],
-"/apj17": ["+remove"],
-"/apj18": ["+remove"],
-"/apj19": ["+remove"],
 "/apj20": ["+applejack"],
 "/apj21": ["+applejack"],
-"/apj22": ["+remove"],
-"/apj23": ["+remove"],
-"/apj24": ["+remove"],
-"/apj25": ["+remove"],
-"/apj26": ["+remove"],
-"/apj27": ["+remove"],
-"/apj28": ["+remove"],
-"/apj29": ["+remove"],
 "/ja00": ["+jappleack"],
 "/ja01": ["+jappleack"],
 "/ja02": ["+jappleack"],
 "/ja03": ["+jappleack"],
 "/ja04": ["+jappleack"],
-"/ja05": ["+remove"],
-"/ja06": ["+remove"],
-"/ja07": ["+remove"],
-"/ja08": ["+remove"],
-"/ja09": ["+remove"],
 "/ja10": ["+jappleack"],
 "/ja11": ["+jappleack"],
 "/ja12": ["+jappleack", "+shrug"],
 "/ja13": ["+jappleack"],
 "/ja14": ["+jappleack"],
-"/ja15": ["+remove"],
-"/ja16": ["+remove"],
-"/ja17": ["+remove"],
-"/ja18": ["+remove"],
-"/ja19": ["+remove"],
 "/ja20": ["+jappleack"],
 "/ja21": ["+jappleack"],
 "/ja22": ["+jappleack"],
 "/ja23": ["+jappleack"],
-"/ja24": ["+jappleack"],
-"/ja25": ["+remove"],
-"/ja26": ["+remove"],
-"/ja27": ["+remove"],
-"/ja28": ["+remove"],
-"/ja29": ["+remove"]
+"/ja24": ["+jappleack"]
 }
