--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -62,6 +62,7 @@ Subreddits:
 - flimflambrothers
 - flitter
 - flitterquisition
+- flurryheart
 - flutquisition
 - flutterlounge
 - freepizzaspizzashop
@@ -102,6 +103,7 @@ Subreddits:
 - mylittlefoodmanes
 - mylittlefortress
 - mylittlefriends
+- mylittlegaming
 - mylittleicons
 - mylittlekindle
 - mylittlekitchen
@@ -135,6 +137,7 @@ Subreddits:
 - pinkquisition
 - ploungeafterdark
 - ploungemafia
+- ponk
 - ponyanarchism
 - ponycountdown
 - ponyloungerts
@@ -150,6 +153,7 @@ Subreddits:
 - scratchquisition
 - seriouslyluna
 - sgap
+- shymotes
 - sombra
 - sonatadusk
 - spanishmeerkat
