Fix duplicate emote

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -286,6 +286,7 @@ Conflicts:
   /tavicheer:     r/taviquisition         # Conflict with r/mlplounge
   /theydied:      r/ponymotes             # Conflict with r/ploungemafia
   /tonightyou:    r/mlploungesteamgroup   # Duplicated to r/ponyloungerts
+  /tsc:           r/troubleshoes          # Duplicated to r/mylittlegaming
   /twibutt:       r/flutterlounge         # Conflict with r/braeburnquisition,
                                           # which came first, but is suggestive
   /twipoker:      r/mylittlewtf           # Conflict with r/thebestpony
