Add r/octavia and r/roleplayponies

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -130,6 +130,7 @@ Subreddits:
 - mylittlewelcomewagon
 - mylittlewtf
 - nightglider
+- octavia
 - onetrueprincess
 - pankakke
 - partyfavor
@@ -145,6 +146,7 @@ Subreddits:
 - ponymotesextra
 - ponymotesextra2
 - pwettypwinkpwincesses
+- roleplayponies
 - roseluck
 - rosequisition
 - rubypinch
