--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -56,6 +56,7 @@ Subreddits:
 - cuttershy
 - daylightemotes
 - desktopponies
+- discord
 - equestriagirls
 - falloutequestria
 - flashsentry
@@ -69,6 +70,7 @@ Subreddits:
 - futemotes
 - gallopfrey
 - glimmerquisition
+- heyitsshugamotes
 - hugemotes
 - idliketobeatree
 - ilovedashie
