Stylesheet/emote/tag updates 2016-08-22

--- a/tags/applejack.json
+++ b/tags/applejack.json
@@ -8,6 +8,7 @@
 "/aj06": ["+applejack"],
 "/aj07": ["+applejack"],
 "/aj08": ["+applejack"],
+"/aj09": ["+applejack"],
 "/aj10": ["+applejack"],
 "/aj11": ["+applejack"],
 "/aj12": ["+applejack"],
@@ -17,6 +18,7 @@
 "/aj16": ["+applejack", "+salute"],
 "/aj17": ["+applejack"],
 "/aj18": ["+applejack"],
+"/aj19": ["+applejack"],
 "/aj20": ["+applejack"],
 "/aj21": ["+applejack"],
 "/aj22": ["+applejack"],
@@ -26,12 +28,37 @@
 "/aj26": ["+applejack"],
 "/aj27": ["+applejack"],
 "/aj28": ["+applejack"],
+"/aj29": ["+applejack"],
 "/apj00": ["+applejack"],
 "/apj01": ["+applejack"],
+"/apj02": ["+applejack"],
+"/apj03": ["+applejack"],
+"/apj04": ["+applejack"],
+"/apj05": ["+applejack"],
+"/apj06": ["+applejack"],
+"/apj07": ["+applejack"],
+"/apj08": ["+applejack"],
+"/apj09": ["+applejack"],
 "/apj10": ["+applejack"],
 "/apj11": ["+applejack"],
+"/apj12": ["+applejack"],
+"/apj13": ["+applejack"],
+"/apj14": ["+applejack"],
+"/apj15": ["+applejack"],
+"/apj16": ["+applejack"],
+"/apj17": ["+applejack"],
+"/apj18": ["+applejack"],
+"/apj19": ["+applejack"],
 "/apj20": ["+applejack"],
 "/apj21": ["+applejack"],
+"/apj22": ["+applejack"],
+"/apj23": ["+applejack"],
+"/apj24": ["+applejack"],
+"/apj25": ["+applejack"],
+"/apj26": ["+applejack"],
+"/apj27": ["+applejack"],
+"/apj28": ["+applejack"],
+"/apj29": ["+applejack"],
 "/ja00": ["+jappleack"],
 "/ja01": ["+jappleack"],
 "/ja02": ["+jappleack"],
