Add more aliases

--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -41,10 +41,10 @@ HiddenTags:
 - +drop
 
 TagAliases:
-  +applejack: [+aj]
+  +applejack: [+aj, +applepone, +applehorse]
   +fluttershy: [+fs]
-  +pinkiepie: [+pp]
-  +rainbowdash: [+rbd, +rd]
+  +pinkiepie: [+pp, +ponk]
+  +rainbowdash: [+rbd, +rd, +dashie]
   +twilightsparkle: [+ts]
 
   +applebloom: [+ab]
