--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -78,12 +78,12 @@ TagImplications:
   +broken: [+remove]
 
   # Mane 6
-  +applejack: [+canon, +mane, +pony]
-  +fluttershy: [+canon, +mane, +pony]
-  +pinkiepie: [+canon, +mane, +pony]
+  +applejack: [+canon, +main, +mane, +pony]
+  +fluttershy: [+canon, +main, +mane, +pony]
+  +pinkiepie: [+canon, +main, +mane, +pony]
   +rarity: [+canon, +mane, +pony]
-  +rainbowdash: [+canon, +mane, +pony]
-  +twilightsparkle: [+canon, +mane, +pony]
+  +rainbowdash: [+canon, +main, +mane, +pony]
+  +twilightsparkle: [+canon, +main, +mane, +pony]
 
   # CMC
   +applebloom: [+canon, +cmc, +major, +pony]
