--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -115,6 +115,7 @@ TagImplications:
   +fleurdelis: [+canon, +major, +pony]
   +flimandflam: [+canon, +major, +pony]
   +flurryheart: [+canon, +major, +pony]
+  +gabby: [+canon, +major]
   +gilda: [+canon, +major]
   +starlightglimmer: [+canon, +major, +pony]
   +grannysmith: [+canon, +major, +pony]
