Fix conflict over /starry

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -287,6 +287,7 @@ Conflicts:
   /shrug:         r/vinylscratch          # Conflict with r/mylittlecirclejerk
   /sphlyrafun:    r/mylittlensfw          # Conflict with r/mylittlechaos
   /starlighthappy: r/glimmerquisition     # Conflict with r/starlightglimmer
+  /starry:        r/sombra                # Conflict with r/heyitsshugamotes
   /t18:           r/mylittlefoodmanes     # Conflict with r/tacoshy
   /tavicheer:     r/taviquisition         # Conflict with r/mlplounge
   /theydied:      r/ponymotes             # Conflict with r/ploungemafia
