Stylesheet/emote/tag updates 2016-12-11

--- a/tags/applefritter.json
+++ b/tags/applefritter.json
@@ -1,5 +1,6 @@
 {
 "/fritapple": ["+applefritter"],
+"/fritaside": ["+applefritter"],
 "/fritbake": ["+applefritter"],
 "/fritbbbff": ["+applefritter"],
 "/fritblush": ["+applefritter"],
@@ -42,6 +43,7 @@
 "/frityay": ["+applefritter"],
 "/hardhatfrits": ["+applefritter"],
 "/rfritapple": ["+v"],
+"/rfritaside": ["+v"],
 "/rfritbake": ["+v"],
 "/rfritbbbff": ["+v"],
 "/rfritblush": ["+v"],
