--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -199,6 +199,7 @@ TagImplications:
   +milkyway: [+oc, +ocpony, +pony]
   +murkynumberseven: [+oc, +ocpony, +pony]
   +raynestorm: [+oc, +ocpony, +pony]
+  +sillynumptie: [+oc, +ocpony, +pony]
   +skyrunner: [+oc, +ocpony, +pony]
   +snowdrop: [+oc, +ocpony, +pony]
   +surprise: [+oc, +ocpony, +pony]
