--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -63,6 +63,7 @@ Subreddits:
 - flimflambrothers
 - flitter
 - flitterquisition
+- floofingandsqueaking
 - flurryheart
 - flutquisition
 - flutterlounge
