--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -150,6 +150,7 @@ Subreddits:
 - ponycountdown
 - ponyloungerts
 - ponymotes
+- ponymotesarchive
 - ponymotesextra
 - ponymotesextra2
 - pwettypwinkpwincesses
