--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -182,6 +182,7 @@ TagImplications:
   +rubypinch: [+canon, +bgpony, +pony]
   +soarin: [+canon, +bgpony, +pony, +wonderbolt]
   +sugarbelle: [+canon, +bgpony, +pony]
+  +yak: [+canon, +pony] # wat
 
   # OC's
   +apathia: [+oc, +ocpony, +pony]
