Stylesheet/emote/tag updates 2017-05-13

--- a/tags/applefritter.json
+++ b/tags/applefritter.json
@@ -16,6 +16,7 @@
 "/frithmmm": ["+applefritter"],
 "/frithmph": ["+applefritter"],
 "/frithoof": ["+applefritter"],
+"/frithuman": ["+applefritter", "+equestriagirls"],
 "/fritjoke": ["+applefritter"],
 "/fritlie": ["+applefritter"],
 "/fritmad": ["+applefritter"],
@@ -59,6 +60,7 @@
 "/rfrithmmm": ["+v"],
 "/rfrithmph": ["+v"],
 "/rfrithoof": ["+v"],
+"/rfrithuman": ["+v"],
 "/rfritjoke": ["+v"],
 "/rfritlie": ["+v"],
 "/rfritmad": ["+v"],
