Add /r/thunderlane, /r/blossomforth, and /r/zephyrbreeze

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -42,6 +42,7 @@ Subreddits:
 - berrytubelounge
 - bigmacintosh
 - bloomjackquisition
+- blossomforth
 - bonquisition
 - braeburnquisition
 - cadance
@@ -187,12 +188,14 @@ Subreddits:
 - thecane
 - themirishponies
 - thepleasurehub
+- thunderlane
 - trixquisition
 - troubleshoes
 - twidashmotes
 - twilightsparkle
 - twiquisition
 - vinylscratch
+- zephyrbreeze
 - zponymotes
 
 Extraction:
