--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -155,12 +155,14 @@ TagImplications:
   +vinylscratch: [+canon, +major, +pony]
   +winona: [+canon, +major]
   +zecora: [+canon, +major, +pony]
+  +zephyrbreeze: [+canon, +bgpony, +pony]
 
   # Background characters
   +applefritter: [+canon, +bgpony, +pony]
   +ahuizotl: [+canon, +villain]
   +beautybrass: [+canon, +bgpony, +pony]
   +berrypunch: [+canon, +bgpony, +pony]
+  +blossomforth: [+canon, +bgpony, +pony]
   +bonbon: [+canon, +bgpony, +pony]
   +carrottop: [+canon, +bgpony, +pony]
   +changeling: [+canon, +villain] # not really +pony though. ugh
@@ -182,6 +184,7 @@ TagImplications:
   +rubypinch: [+canon, +bgpony, +pony]
   +soarin: [+canon, +bgpony, +pony, +wonderbolt]
   +sugarbelle: [+canon, +bgpony, +pony]
+  +thunderlane: [+canon, +bgpony, +pony]
   +yak: [+canon, +pony] # wat
 
   # OC's
