r/applefritter and +applefritter tags

--- a/tags/applefritter.json
+++ b/tags/applefritter.json
@@ -5,8 +5,8 @@
 "/fritbbbff": ["+applefritter"],
 "/fritblush": ["+applefritter"],
 "/fritbow": ["+applefritter"],
-"/fritchubbie": ["+applefritter"],
-"/fritclapping": ["+animote", "+applefritter"],
+"/fritchubbie": ["+applefritter", "+hovermote"],
+"/fritclapping": ["+animote", "+applefritter", "+clap"],
 "/fritcute": ["+applefritter"],
 "/fritdancing": ["+animote", "+applefritter"],
 "/fritderp": ["+applefritter"],
@@ -25,15 +25,15 @@
 "/fritnya": ["+applefritter"],
 "/fritreally": ["+applefritter"],
 "/fritsad": ["+applefritter"],
-"/fritsalute": ["+applefritter"],
+"/fritsalute": ["+applefritter", "+salute"],
 "/fritshock": ["+applefritter"],
-"/fritshrug": ["+applefritter"],
+"/fritshrug": ["+applefritter", "+shrug"],
 "/fritsitting": ["+animote", "+applefritter"],
-"/fritsleeping": ["+animote", "+applefritter"],
+"/fritsleeping": ["+animote", "+applefritter", "+sleeping"],
 "/fritsmeel": ["+applefritter"],
 "/fritsmile": ["+applefritter"],
 "/fritsmirk": ["+applefritter"],
-"/fritspet": ["+applefritter"],
+"/fritspet": ["+applefritter", "+misc"],
 "/fritstanding": ["+animote", "+applefritter"],
 "/fritstare": ["+applefritter"],
 "/fritteehee": ["+applefritter"],
