--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -91,7 +91,7 @@ TagImplications:
   +sweetiebelle: [+canon, +cmc, +major, +pony]
 
   # Significant canon characters
-  +ariablaze: [+canon, +major, +pony]
+  +ariablaze: [+canon, +major, +pony, +villain]
   +adagiodazzle: [+canon, +major, +pony]
   +angel: [+canon, +major]
   +babseed: [+canon, +major, +pony]
