--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -92,7 +92,7 @@ TagImplications:
 
   # Significant canon characters
   +ariablaze: [+canon, +major, +pony, +villain]
-  +adagiodazzle: [+canon, +major, +pony]
+  +adagiodazzle: [+canon, +major, +pony, +villain]
   +angel: [+canon, +major]
   +babseed: [+canon, +major, +pony]
   +bigmac: [+canon, +major, +pony]
