--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -141,8 +141,8 @@ TagImplications:
   +shiningarmor: [+canon, +major, +pony]
   +silverspoon: [+canon, +major, +pony]
   +snipsandsnails: [+canon, +major, +pony]
+  +sonatadusk: [+canon, +major, +pony, +villain]
   +spike: [+canon, +major]
-  +sonatadusk: [+canon, +major, +pony]
   +spitfire: [+canon, +major, +pony, +wonderbolt]
   +stevenmagnet: [+canon, +major]
   +sunsetshimmer: [+canon, +major] # +canon sort of, +major I can only assume
