--- a/tags/applejack.json
+++ b/tags/applejack.json
@@ -61,7 +61,7 @@
 "/apj26": ["+applejack"],
 "/apj27": ["+applejack"],
 "/apj28": ["+applejack"],
-"/apj29": ["+applejack"],
+"/apj29": ["+applejack", "+sunglasses"],
 "/ja00": ["+jappleack"],
 "/ja01": ["+jappleack"],
 "/ja02": ["+jappleack"],
