--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -122,8 +122,10 @@ TagImplications:
   +gummy: [+canon, +major]
   +harshwhinny: [+canon, +major, +pony]
   +hoitytoity: [+canon, +major, +pony]
+  +indigozap: [+canon, +major]
   +ironwill: [+canon, +major]
   +kingsombra: [+canon, +major, +pony, +villain]
+  +lemonzest: [+canon, +major]
   +lightningdust: [+canon, +major, +pony]
   +maredowell: [+canon, +major, +pony]
   +maud: [+canon, +major, +pony]
@@ -138,13 +140,17 @@ TagImplications:
   +pip: [+canon, +major, +pony]
   +princesscelestia: [+canon, +major, +pony, +princess]
   +princessluna: [+canon, +major, +pony, +nightmaremoon, +princess]
+  +principalcinch: [+canon, +major, +villain]
   +shiningarmor: [+canon, +major, +pony]
   +silverspoon: [+canon, +major, +pony]
   +snipsandsnails: [+canon, +major, +pony]
   +sonatadusk: [+canon, +major, +pony, +villain]
+  +soursweet: [+canon, +major]
   +spike: [+canon, +major]
   +spitfire: [+canon, +major, +pony, +wonderbolt]
   +stevenmagnet: [+canon, +major]
+  +sugarcoat: [+canon, +major]
+  +sunnyflare: [+canon, +major]
   +sunsetshimmer: [+canon, +major] # +canon sort of, +major I can only assume
   +tank: [+canon, +major]
   +tirek: [+canon, +major, +villain]
