--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -177,6 +177,7 @@ TagImplications:
   +daisy: [+canon, +bgpony, +pony]
   +dinky: [+canon, +bgpony, +pony]
   +doctorwhooves: [+canon, +bgpony, +pony, +doctorwho]
+  +doublediamond: [+canon, +bgpony, +pony]
   +flitter: [+canon, +bgpony, +pony]
   +lily: [+canon, +bgpony, +pony]
   +lotus: [+canon, +bgpony, +pony]
