--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -151,7 +151,7 @@ TagImplications:
   +stevenmagnet: [+canon, +major]
   +sugarcoat: [+canon, +major]
   +sunnyflare: [+canon, +major]
-  +sunsetshimmer: [+canon, +major] # +canon sort of, +major I can only assume
+  +sunsetshimmer: [+canon, +major, +pony] # +canon sort of, +major I can only assume
   +tank: [+canon, +major]
   +tirek: [+canon, +major, +villain]
   +trixie: [+canon, +major, +pony]
