--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -159,6 +159,7 @@ TagImplications:
   +twist: [+canon, +major, +pony]
   +sunburst: [+canon, +major, +pony]
   +vinylscratch: [+canon, +major, +pony]
+  +windywhistles: [+canon, +major]
   +winona: [+canon, +major]
   +zecora: [+canon, +major, +pony]
   +zephyrbreeze: [+canon, +bgpony, +pony]
