Stylesheet/emote/tag updates 2017-11-14, add r/dinkymotes, r/marshmallow, r/somnambula, and r/twistarlight

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -57,6 +57,7 @@ Subreddits:
 - cuttershy
 - daylightemotes
 - desktopponies
+- dinkymotes
 - discord
 - equestriagirls
 - falloutequestria
@@ -83,6 +84,7 @@ Subreddits:
 - lyra
 - lyraquisition
 - marmemotes
+- marshmallow
 - maudpie
 - minuette
 - mlas1animotes
@@ -168,6 +170,7 @@ Subreddits:
 - shymotes
 - sillynumptie
 - sombra
+- somnambula
 - sonatadusk
 - spanishmeerkat
 - speedingturtle
@@ -194,6 +197,7 @@ Subreddits:
 - twidashmotes
 - twilightsparkle
 - twiquisition
+- twistarlight
 - vinylscratch
 - zephyrbreeze
 - zponymotes
