Fix WebExt update URL

--- a/addon/we-manifest.json
+++ b/addon/we-manifest.json
@@ -18,7 +18,7 @@
     "applications": {
         "gecko": {
             "id": "jid1-tHrhDJXsKvsiCw@jetpack",
-            "update_url": "https://ponymotes.net/bpm/we-updates.json"
+            "update_url": "https://ponymotes.net/bpm/we/updates.json"
         }
     },
     "description": "View Reddit ponymotes across the site",
