Fix random emote conflicts

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -294,7 +294,9 @@ Conflicts:
   /pikachu:       r/ponymotes             # Conflict with r/tacoshy
   /ppnervous:     r/pinkiepie             # Conflict with r/mlpdrawingschool
   /rabwant:       r/mylittlelivestream    # Conflict with r/applebloom
+  /raricatmallow: r/ponymotes             # Conflict with r/marshmallow
   /raricoffee:    r/onetrueprincess       # Conflict with r/marmemotes
+  /rarimallow:    r/equestriagirls        # Conflict with r/marshmallow
   /rwoonajuice:   r/mylittledaww          # Duplicated to r/mylittleanime
   /s:             r/falloutequestria      # Conflict with r/mylittleanime
   /sadlyra:       r/mylittleonions        # Conflict with r/mylittleanime
