Add movie and S7 finale character tags

--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -73,6 +73,8 @@ TagAliases:
 
   +browniebun: [+horsewife]
 
+  +tempestshadow: [+fizzlepopberrytwist]
+
 TagImplications:
   # Special tags
   +broken: [+remove]
@@ -99,6 +101,8 @@ TagImplications:
   +braeburn: [+canon, +major, +pony]
   +princesscadance: [+canon, +major, +pony]
   +caketwins: [+canon, +major, +pony]
+  +capper: [+canon, +major]
+  +captaincelaeno: [+canon, +major]
   +cheerilee: [+canon, +major, +pony]
   +coloratura: [+canon, +major, +pony]
   +queenchrysalis: [+canon, +major, +pony, +villain]
@@ -111,12 +115,14 @@ TagImplications:
   +discord: [+canon, +major, +villain]
   +ember: [+canon, +major]
   +fancypants: [+canon, +major, +pony]
+  +flashmagnus: [+canon, +major, +pony]
   +flashsentry: [+canon, +major, +pony]
   +fleurdelis: [+canon, +major, +pony]
   +flimandflam: [+canon, +major, +pony]
   +flurryheart: [+canon, +major, +pony]
   +gabby: [+canon, +major]
   +gilda: [+canon, +major]
+  +grubber: [+canon, +major]
   +starlightglimmer: [+canon, +major, +pony]
   +grannysmith: [+canon, +major, +pony]
   +gummy: [+canon, +major]
@@ -127,9 +133,11 @@ TagImplications:
   +kingsombra: [+canon, +major, +pony, +villain]
   +lemonzest: [+canon, +major]
   +lightningdust: [+canon, +major, +pony]
+  +magemeadowbrook: [+canon, +major, +pony]
   +maredowell: [+canon, +major, +pony]
   +maud: [+canon, +major, +pony]
   +mayor: [+canon, +major, +pony]
+  +mistmane: [+canon, +major, +pony]
   +moondancer: [+canon, +major, +pony]
   +nightmaremoon: [+canon, +major, +pony, +villain]
   +opalescence: [+canon, +major]
@@ -140,20 +148,28 @@ TagImplications:
   +pip: [+canon, +major, +pony]
   +princesscelestia: [+canon, +major, +pony, +princess]
   +princessluna: [+canon, +major, +pony, +nightmaremoon, +princess]
+  +princessskystar: [+canon, +major]
   +principalcinch: [+canon, +major, +villain]
+  +queennovo: [+canon, +major]
+  +rockhoof: [+canon, +major, +pony]
   +shiningarmor: [+canon, +major, +pony]
   +silverspoon: [+canon, +major, +pony]
   +snipsandsnails: [+canon, +major, +pony]
-  +somnambula: [+canon, +major, +pony, +villian]
+  +somnambula: [+canon, +major, +pony]
   +sonatadusk: [+canon, +major, +pony, +villain]
+  +songbirdserenade: [+canon, +major, +pony]
   +soursweet: [+canon, +major]
   +spike: [+canon, +major]
   +spitfire: [+canon, +major, +pony, +wonderbolt]
+  +starswirlthebearded: [+canon, +major, +pony]
   +stevenmagnet: [+canon, +major]
+  +stormking: [+canon, +major, +villain]
+  +stygian: [+canon, +major, +pony]
   +sugarcoat: [+canon, +major]
   +sunnyflare: [+canon, +major]
   +sunsetshimmer: [+canon, +major, +pony] # +canon sort of, +major I can only assume
   +tank: [+canon, +major]
+  +tempestshadow: [+canon, +major, +pony]
   +tirek: [+canon, +major, +villain]
   +trixie: [+canon, +major, +pony]
   +troubleshoes: [+canon, +major, +pony]
